# flutter_ffi

./: README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/sources/: classifications.xml
lib/: main.dart  native_opencv.dart
lib/app_initialization_page/: initialization_page.dart  initialization_page_view_model.dart
lib/app_navigation/: app_navigation.dart
lib/application/: application.dart  application_page_state.dart  application_view_model.dart
lib/data/data_providers/: scan_data_provider.dart
lib/data/repositories/: scan_repository.dart  theme_repository.dart
lib/domain/clients/database/: database_client.dart  database_table.dart
lib/domain/constants/: constants.dart
lib/domain/models/plate_model/: article_model.dart  article_model.g.dart
lib/domain/services/: scan_service.dart  theme_service.dart
lib/domain/table/: tbl_boxes.dart
lib/theme/: app_theme.dart
lib/ui/home_screen/: home_screen.dart  home_screen_view_model.dart
lib/ui/scan_screen/: scan_screen.dart  scan_screen_state.dart  scan_screen_view_model.dart
lib/ui/settings_screen/: settings_screen.dart  settings_screen_view_model.dart
native_opencv/: pubspec.yaml
native_opencv/android/: CMakeLists.txt  build.gradle
native_opencv/android/src/test/java/com/example/native_opencv/: NativeOpencvPluginTest.java
native_opencv/sources/: DetectChars.cpp  DetectChars.h  DetectPlates.cpp  DetectPlates.h  Main.cpp  Main.h  NativeOpencvPlugin.cpp  NativeOpencvPlugin.h
test/: widget_test.dart
(+1 files in other folders)
